# workshop_structure

./: README.md  pyproject.toml
app/: main.py
app/data/output/: output.xlsx
app/pipeline/: __init__.py  extract.py  load.py  pyproject.toml  transform.py
tests/: test_pipeline.py
