[tool.poetry]
name = "workshop-structure"
version = "0.1.0"
description = ""
authors = ["Bruno Silva <bruno.ogs@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.3"
pandas = "^2.2.3"
pytest = "^8.3.3"
blue = "^0.9.1"
isort = "^5.13.2"
pydocstyle = "^6.3.0"
pip-audit = "^2.7.3"
mkdocs = "^1.6.1"
mkdocstrings-python = "^1.12.2"
pygments = "^2.18.0"
mkdocs-material = "^9.5.44"
pymdown-extensions = "^10.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile= "black"
know_third_party = []

[tool.taskipy.tasks]
kill = "kill -9 $(lsof -t -i :8000)"